Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14964

Property bindings cannot be made from within a javascript statement

    XMLWordPrintable

Details

    • 43b8305367156c1ceb09eb4a056bdae3f325b5eb

    Description

      Posted on behalf of Charley Bay.

      Properties can only be assigned new values from within a javascript statement.
      Their binding cannot be set or changed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            mathiasm Mathias Malmqvist
            Votes:
            4 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes