Allow property bindings to be easily created from JavaScript

Properties can now be assigned a function that returns the binding
value.

Task-number: QTBUG-14964
Reviewed-by: Aaron Kennedy